# open-db-mcp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
config/: datasources.json  whitelist.json
installer/: install.ps1  install.sh  open-db-mcp.wrapper.py
libs/: README.md
packaging/: build_current.spec  build_linux.spec  build_macos.spec  build_windows.spec  make_dist.sh
src/open_db_mcp/: __init__.py  __main__.py  cli.py  config.py  errors.py  registry.py  server.py
src/open_db_mcp/drivers/: __init__.py  base.py  dm_driver.py  factory.py  mysql_driver.py  oracle_driver.py  oracle_jdbc_driver.py  postgres_driver.py  registry.py  sqlite_driver.py
src/open_db_mcp/parser/: jdbc_properties.py  secret_resolver.py
src/open_db_mcp/repositories/: __init__.py  base.py  datasource_repository.py  whitelist_repository.py
src/open_db_mcp/safety/: __init__.py  auditor.py  impact_estimator.py  sql_analyzer.py  sql_validator.py  whitelist.py
src/open_db_mcp/services/: __init__.py  data_service.py  dba_service.py  dml_service.py  meta_service.py  query_service.py  slow_query_service.py
src/open_db_mcp/tools/: data_tools.py  dba_tools.py  dml_tools.py  ds_tools.py  meta_tools.py  query_tools.py  slow_query_tools.py
src/open_db_mcp/tx/: transaction.py
