[project]
name = "open-db-mcp"
version = "1.0.0"
description = "Oracle / 达梦 / MySQL 数据库 MCP 工具（stdio 本地版，复用 jdbc.properties）"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "cjp1016", email = "cjp1016@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "sqlparse>=0.5.0",
    "sqlglot>=23.0.0",
    "oracledb>=2.0.1",
    "pymysql>=1.1",
    "JayDeBeApi>=1.2.3",
    "JPype1>=1.5.0,<1.6.0",    # <1.6.0 兼容 JDK 1.8（1.6.0 有 org.jpype.jar 查找 bug）
    "DBUtils>=3.1.0",
    "cryptography>=42.0",
    "psycopg2-binary>=2.9",
    "typer>=0.12",
    "structlog>=24.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.6",
    "pyinstaller-hooks-contrib>=2024.7",
]
keyring = [
    "keyring>=24.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10",
    "keyring>=24.0",
]

[project.scripts]
open-db-mcp = "open_db_mcp.cli:app"

[project.entry-points."open_db_mcp.drivers"]
mysql = "open_db_mcp.drivers.registry:_mysql_plugin"
oracle = "open_db_mcp.drivers.registry:_oracle_plugin"
dm = "open_db_mcp.drivers.registry:_dm_plugin"
postgres = "open_db_mcp.drivers.registry:_postgres_plugin"
sqlite = "open_db_mcp.drivers.registry:_sqlite_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_db_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "open_db_mcp/config"
"libs" = "open_db_mcp/libs"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (mypy 也检查，保持一致)
    "B008",   # do not perform function calls in argument defaults (FastMCP 装饰器模式需要)
]

[tool.ruff.lint.isort]
known-first-party = ["open_db_mcp"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
mypy_path = ["src"]
exclude = [
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "dbutils.*",
    "jaydebeapi.*",
    "jpype.*",
    "keyring",
]
ignore_missing_imports = true
